YAML/servicemesh/spring-gw.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: spring-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: spring-vs
spec:
  hosts:
  - "*"
  gateways:
  - spring-gateway
  http:
  - match:
    - uri:
        exact: /
    - uri:
        prefix: /
    route:
    - destination:
        host: spring-boot-ui
        port:
          number: 8081
